dataset1235/2025-2/805158916/users/644501727/executions/71079933_3788368433.log
== RUN (2025-08-13 14:11:36)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
print(imput(var))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:11:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
print(imput(var))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:11:24)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "9"

# Impressao de saidas
print(imput(var))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(imput(var))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:12:11)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
print(input(var))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:10:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = 

# Impressao de saidas
print(imput(var))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:10:35)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = 

# Impressao de saidas
print(imput(var))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:10:31)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = 

# Impressao de saidas
print(imput(var))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
